# genetic-algorithm

./: CMakeLists.txt  GeneticAlgorithm.cpp  GeneticAlgorithm.h  Individual.cpp  Individual.h  README.MD  Result.cpp  Result.h  genetic_algorithm.sln  genetic_algorithm.vcxproj  libgenetic_algorithm.pc.in  main.cpp
.github/workflows/: cmake.yml
include/: GeneticAlgorithm.h  Individual.h  Result.h
test/: CMakeLists.txt  GeneticAlgorithmTest.cpp  IndividualTest.cpp
